# ParkVisionBot

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
data/: dataset.example.yaml  spots.json
data/roboflow_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
data/roboflow_dataset/train/: labels.cache
data/roboflow_dataset/train/labels/: frame_000000_jpg.rf.394733e57ce7962ff4821fa86a530d0a.txt  frame_000015_jpg.rf.d9bbfc22f8f9f37135ac3c76fe6b97c7.txt  frame_000030_jpg.rf.e1645ffbef5e4f734856bff09cc9c827.txt  frame_000045_jpg.rf.a61340e4206dfaff59c08f29d24dbe5e.txt  frame_000075_jpg.rf.5063128a37a7f48432ddeaeb535f4ca0.txt  frame_000090_jpg.rf.953ef9354ebfc788a7933e1210fef7f4.txt  frame_000105_jpg.rf.d43501ad1b1f73071ebebb943e9a29fb.txt  frame_000120_jpg.rf.8952e8970a4d926115e570324191fe61.txt  frame_000135_jpg.rf.38e7612514012f97a8e186b5f45e88de.txt  frame_000150_jpg.rf.1e25df7913ec26f018be484ac843f876.txt  frame_000165_jpg.rf.044c9120d5cb0043ad35a3480f4caa3e.txt  frame_000180_jpg.rf.29e29cf83ea1987214752d75401e32f1.txt  frame_000195_jpg.rf.a6dc6bb9f230d83069a1f5f66a8b1546.txt  frame_000210_jpg.rf.63d1ccf0e1310f4f6886c02e096fa974.txt  frame_000225_jpg.rf.95216f355c895b2f338e62808d4913b2.txt  (+22 more)
data/roboflow_dataset/valid/: labels.cache
data/runs/detect/: args.yaml  results.csv
src/parking_bot/: __init__.py  bot.py  cli.py  config.py  detect.py  spots.py  viz.py
src/parking_bot/tools/: __init__.py  demo_video.py  download_models.py  extract_dataset.py  extract_frame.py  train_yolo.py  web_mark_spots.py
(+9 files in other folders)
